--- a/action.yml
+++ b/action.yml
@@ -25,14 +25,12 @@ runs:
   steps:
     - id: setup-python
       name: Setup Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version:  3.9
-
-    - id: install-deps
-      name: Install Python dependencies
-      run: pip install internetarchive retry
-      shell: bash
+      run: |
+        python -m pip install --upgrade pip
+        pip install internetarchive retry
 
     - id: upload-files
       name: Upload files
