--- a/action.yml
+++ b/action.yml
@@ -28,8 +28,10 @@ runs:
       uses: actions/setup-python@v5
       with:
         python-version:  3.9
+
+    - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python3 -m pip install --upgrade pip
         pip install internetarchive retry
 
     - id: upload-files
