--- a/action.yml
+++ b/action.yml
@@ -23,6 +23,9 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Checkout repo
+      uses: actions/checkout@v4
+
     - id: setup-python
       name: Setup Python
       uses: actions/setup-python@v5
